<?xml version="1.0"?>
<package format="2">
  <name>fly_drone</name>
  <version>0.0.0</version>
  <description>The fly_drone package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>

  </export>
</package>


